@@ -22,6 +22,16 @@ endif ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
 cmake_minimum_required (VERSION 2.8.0)
 set (CMAKE_LEGACY_CYGWIN_WIN32 0)
 
+if (NOT ENABLE_ALLPATHS)
+  # Avoid possible linker incompatibilities for
+  # libstdc++ and libgomp on Linux if anaconda is installed
+  set (CMAKE_IGNORE_PATH ${CMAKE_IGNORE_PATH}
+                         $ENV{HOME}/anaconda/lib
+                         $ENV{HOME}/anaconda/include
+                         $ENV{HOME}/anaconda3/lib
+                         $ENV{HOME}/anaconda3/include)
+endif()
+
 project (ARTS)
 
 enable_testing ()
