@@ -1,3 +1,12 @@
+2017-03-01  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-644
+
+	* CMakeLists.txt:
+
+	Add workaround for possible linker conflicts for libstdc++ and libgomp
+	on Linux if anaconda is in the path. Reported by Richard.
+
 2017-02-23 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-643
